existing code walkthrough

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <th>ROAST</th>
             </tr>
         </thead>
-        <tbody id="coffees"></tbody>
+        <tbody id="coffees">
+<!--  result of renderCoffees(coffees)-->
+        </tbody>
     </table>
 
     <script src="main.js"></script>
